--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 </head>
 <body>
-    
+  <div class="header">
+
+      <h2>Header</h2>
+    </div>
     <div class="flex-container">
         <div>HOME</div>
         <div>OUR TEAM</div>
@@ -42,7 +45,7 @@
             <p>&copy; 2023 by Nobody. All rights reserved.</p> 
           </div>
         </footer>
-             
+        <div class="gray-area"></div>    
     </div>
            <div class="topics">
           <h2><em>Related</em></h2>
